--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -23,3 +23,25 @@
   margin: 0;
   justify-self: flex-end;
 }
+
+@media (max-width: 768px) {
+  .banner h1 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 450px) {
+  .banner {
+    color: #e2e2e2;
+    line-height: 3rem;
+    position: relative;
+    top: 10rem;
+    padding: 3rem 1rem 1.5rem;
+    background: rgba(0, 0, 0, 0.702);
+    backdrop-filter: blur(5px);
+  }
+
+  .banner h1 {
+    font-size: 1.5rem;
+  }
+}
